[gd_scene load_steps=11 format=3 uid="uid://b37mrtdhbeqwu"]

[ext_resource type="Texture2D" uid="uid://dx2tsbnvebbw2" path="res://Assets/GUI/GUI.png" id="1_55b22"]
[ext_resource type="Script" uid="uid://dhfog02udf24j" path="res://Scenes/GUI/item_info_panel.gd" id="1_e13jd"]
[ext_resource type="Texture2D" uid="uid://c511iceka5rmq" path="res://Assets/Projectile/Food.png" id="2_e13jd"]
[ext_resource type="Texture2D" uid="uid://bb616t5haov2h" path="res://Assets/GUI/KeyboardIcons/keyboard_E_1.png" id="4_p2845"]
[ext_resource type="Texture2D" uid="uid://cn7i821byadde" path="res://Assets/GUI/KeyboardIcons/keyboard_E_2.png" id="5_muunp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i0lod"]
atlas = ExtResource("1_55b22")
region = Rect2(0, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e13jd"]
atlas = ExtResource("1_55b22")
region = Rect2(49, 97, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2845"]
atlas = ExtResource("2_e13jd")
region = Rect2(0, 16, 16, 16)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_muunp"]
color = Color(0.721569, 0.435294, 0.313726, 1)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_7wgkt"]
frames = 2
frame_0/texture = ExtResource("4_p2845")
frame_0/duration = 0.2
frame_1/texture = ExtResource("5_muunp")
frame_1/duration = 0.2

[node name="ItemInfoPanel" type="MarginContainer"]
z_index = 10
offset_right = 128.0
offset_bottom = 100.0
script = ExtResource("1_e13jd")

[node name="BackgroundContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Background" type="NinePatchRect" parent="BackgroundContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_i0lod")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="ItemNameContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="NameBackground" type="NinePatchRect" parent="ItemNameContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_e13jd")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="ItemNameContainer" type="MarginContainer" parent="ItemNameContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 3

[node name="ItemNameLabel" type="Label" parent="ItemNameContainer/ItemNameContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.156863, 0.141176, 0.203922, 1)
text = "芭娜娜"

[node name="ItemInfoContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ItemInfoContainer"]
layout_mode = 2

[node name="ItemIconContainer" type="MarginContainer" parent="ItemInfoContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="ItemIcon" type="TextureRect" parent="ItemInfoContainer/VBoxContainer/ItemIconContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_p2845")

[node name="HBoxContainer" type="HBoxContainer" parent="ItemInfoContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemTypeLabel" type="Label" parent="ItemInfoContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "圣物"

[node name="ControlSpacer" type="Control" parent="ItemInfoContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemQualityLabel" type="Label" parent="ItemInfoContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "普通"

[node name="PanelSpacer" type="Panel" parent="ItemInfoContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_muunp")

[node name="ItemDescribeLabel" type="Label" parent="ItemInfoContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "一根香蕉，据说可以提升冲刺速度"
autowrap_mode = 3

[node name="ToolTipContainer" type="MarginContainer" parent="ItemInfoContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_top = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="ItemInfoContainer/VBoxContainer/ToolTipContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ItemInfoContainer/VBoxContainer/ToolTipContainer/HBoxContainer2"]
layout_mode = 2
text = "按下"

[node name="TextureRect" type="TextureRect" parent="ItemInfoContainer/VBoxContainer/ToolTipContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AnimatedTexture_7wgkt")

[node name="Label2" type="Label" parent="ItemInfoContainer/VBoxContainer/ToolTipContainer/HBoxContainer2"]
layout_mode = 2
text = "拾取"
